@@ -1,5 +1,10 @@
 2004-03-03  Mike Kestner  <mkestner@ximian.com>
 
+	* Main/Base/Services/DebuggingService.cs : add some debugging info
+	and run the debugger before we insert breakpoints.
+
+2004-03-03  Mike Kestner  <mkestner@ximian.com>
+
 	* Main/Base/Services/DebuggingService.cs (UnloadService): kill
 	running debugger instances on unload.
 
